<resources>
    <string name="app_name">CVSI</string>

    <!-- Bottom Navigation -->
    <string name="bottom_navigation_home">Albums</string>
    <string name="bottom_navigation_camera">Camera</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="bottom_navigation_locations">Locations</string>

    <!--Albums -->
    <string name="album_new">New album</string>
    <string name="album_title">Album title</string>
    <string name="album_description">Album description</string>

    <!-- Pictures -->
    <string name="picture_upload">Upload picture</string>

    <!-- Locations -->
    <string name="fix_location">Adjust location</string>

    <!-- Network -->
    <string name="upload_started">Upload started</string>
    <string name="upload_successful">Upload successful!</string>
    <string name="upload_failed">Upload failed!</string>
    <string name="disconnected">This device is currently offline.</string>

    <!-- Authentication -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="email_empty">Email cannot be empty</string>
    <string name="email_invalid">Invalid email</string>
    <string name="email_exists">This email is already in use</string>
    <string name="password">Password</string>
    <string name="password_weak">Password must be at least 6 chars long</string>
    <string name="auth_failed">Invalid email or password</string>

    <!-- Camera -->
    <string name="pictures_directory">CVSI</string>

    <!-- Misc. -->
    <string name="provider_authority">io.github.ggabriel96.cvsi.android.fileprovider</string>
    <string name="wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
