<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_navigation_albums"
        android:enabled="true"
        android:icon="@drawable/ic_collections_black_24dp"
        android:title="@string/bottom_navigation_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_camera"
        android:enabled="true"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/bottom_navigation_camera"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_navigation_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_navigation_profile"
        app:showAsAction="ifRoom"/>

</menu>
